Atualização: novos executáveis, melhorias no README e atualização do 7za para v26.0

--- a/config.ini
+++ b/config.ini
@@ -1,21 +1,11 @@
-; ================================
-; X360 AUTO GOD TOOL CONFIG
-; ================================
+# ==============================
+# CONFIGURAÇÃO FTP - XBOX 360
+# ==============================
 
-[FTP]
-
-; IP do seu Xbox 360 na rede
-ip=192.168.1.15
-
-; Usuario FTP (normalmente xboxftp)
+ip=192.168.1.16
 user=xboxftp
-
-; Senha FTP (normalmente xboxftp)
 password=xboxftp
 
-; Caminho de instalacao do jogo
-; HD interno:
 DEST=/Hdd1/Content/0000000000000000/
+DEST_XEX=/Hdd1/MeusXEX/
 
-; USB exemplo:
-; DEST=/Usb0/Content/0000000000000000/
